--- a/example/index.html
+++ b/example/index.html
@@ -16,8 +16,15 @@
   <body style="height:1000px;">
     <div id="container">
       <div id="app"></div>
+      <a href="./index-1.html" onclick="test()">hahah</a>
     </div>
     <script type="text/javascript" src="../dist/watermark.min.js"></script>
     <script src="./index.js"></script>
+
+    <script>
+      function test(){
+        console.log("jajjjj");
+      }
+    </script>
   </body>
 </html>
