--- a/example/index-3.html
+++ b/example/index-3.html
@@ -97,7 +97,7 @@
 
         mergeData(textData, 'R');
     };
-    img.src = 'https://www.flightroutes24.com/images/icon_iata.da2bf0c5.png';
+    img.src = 'https://img6.bdstatic.com/img/image/pcindex/sunjunpchuazhoutu.JPG';
 
     var processData = function(originalData){
       var data = originalData.data;
