build:修复使用canvas时,字母基线以下会被切割问题

--- a/example/index-4.html
+++ b/example/index-4.html
@@ -20,7 +20,7 @@
       const WaterMark = window.WaterMark.WaterMark;
 
       new WaterMark({
-        content: "oms",
+        content: "abcdefghijklmnopqrstuvwxyz",
         lineHeight: "1.2",
         fontAlpha: 0.1,
         rotateAngle: 0,
